# various-web-frameworks-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  compose.yaml  diesel.toml  docker-compose.yml
.github/workflows/: test.yml
config/: container.toml  local.toml
crates/actix/: Cargo.toml
crates/actix/src/: lib.rs  main.rs  registry.rs  routes.rs  servers.rs  state.rs
crates/actix/src/handlers/: admin.rs  app.rs  error.rs
crates/actix/src/middlewares/: auth_jwt.rs
crates/actix/src/routes/: actix.rs  apistos.rs  mod.rs
crates/airone/: .gitignore  Cargo.toml  DOCS.md  Makefile  README.md  format.sh.bk  rustfmt.toml.bk
crates/airone/airone_derive/: Cargo.toml
crates/airone/airone_derive/src/: gettersetter.rs  lib.rs  serde.rs
crates/airone/examples/: bulk_operations.rs  simple.rs
crates/airone/src/: error.rs  lib.rs  prelude.rs  serde.rs
crates/airone/src/database/: loading.rs  mod.rs  operations.rs  settings.rs  write_proxy.rs
crates/airone/src/tests/: manualsave.rs  mod.rs  tests.rs
crates/axumfw/: Cargo.toml
crates/axumfw/src/: main.rs  routes.rs
crates/axumfw/src/handlers/: admin.rs  app.rs  basis.rs  error.rs  mod.rs
crates/axumfw/src/middlewares/: auth_jwt.rs  common.rs  mod.rs
crates/components/: Cargo.toml
crates/components/src/: errors.rs  lib.rs  registry.rs  state.rs  toml.rs
crates/components/src/dbs/: conn.rs
crates/components/src/entities/: todos.rs  users.rs
crates/components/src/hashes/: argon2.rs  hash.rs  mod.rs  pbkdf2.rs  scrypt.rs  sha256.rs
crates/components/src/repositories/: mod.rs  todos.rs  todos_diesel.rs  users.rs  users_diesel.rs
crates/components/src/schemas/: mod.rs  todos.rs
crates/components/src/schemas/diesel/: mod.rs  model.rs  schema.rs  todo_status.rs  todos.rs  users.rs
crates/components/src/schemas/sea_orm/: sea_orm_active_enums.rs  users.rs
crates/components/src/tests_helper/: diesel.rs
crates/components/src/usecases/: admin.rs  app.rs  auth.rs  mod.rs
crates/components/tests/: integration_test.rs
crates/grpc-servers/: Cargo.toml  Makefile  README.md  build.rs
crates/grpc-servers/src/: client.rs  server.rs
crates/webserver/: Cargo.toml  Makefile
crates/webserver/src/: errors.rs  handler.rs  lib.rs  main.rs  middleware.rs  parser.rs  request.rs  responser.rs  router.rs
docker/: Dockerfile_pg  Dockerfile_rust
docker/pg/: init.sql
scripts/: admin.hurl  app.hurl  auth.lua  check_only_endpoint.hurl  req.sh
spec/: spec.json
src/: args.rs  jwt.rs  lib.rs  main.rs  rand.rs  registry.rs  toml.rs
src/dbs/: conn.rs
src/entities/: login.rs  mod.rs  todos.rs
src/handlers/: admin.rs  app.rs  basis.rs
src/middlewares/: auth_jwt.rs  mod.rs
