[package]
name = "actix"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["apistos-models", "cfg-if"]

[dependencies]
# workspace
components = { path = "../components" }
# outer crates
actix-cors = "0.7.0"
actix-http = "3.8.0"
actix-web = "4"
actix-web-lab = "0.20"
apistos = { version = "0.3", features = [
  "swagger-ui",
  "extras",
  "qs_query",
  "rapidoc",
  "redoc",
] }
apistos-models = "0.3"
cfg-if = "1.0.0"
env_logger = "0.11"
log = { version = "0.4", features = ["std", "serde"] }
schemars = { package = "apistos-schemars", version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }

[features]
default = ["pbkdf2"]
pbkdf2 = []
argon2 = []
scrypt = []

[lints]
workspace = true
