[package]
name = "axumfw"
version = "0.1.0"
edition = "2021"

[dependencies]
# workspace
components = { path = "../components" }
# outer crates
axum = { version = "0.7.5", features = ["tracing", "macros"] }
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[lints]
workspace = true
