[package]
name = "components"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["apistos-models"]

[dependencies]
anyhow = "1.0"
apistos = { version = "0.3", features = [
  "swagger-ui",
  "extras",
  "qs_query",
  "rapidoc",
  "redoc",
] }
apistos-models = "0.3"
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22"
cfg-if = "1.0.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "9"
jwt-simple = "0.11"
log = { version = "0.4", features = ["std", "serde"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
schemars = { package = "apistos-schemars", version = "0.8" }
scrypt = "0.11"
sea-orm = { version = "^0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
toml = "0.8.13"
validator = { version = "0.18", features = ["derive"] }

[features]
default = ["pbkdf2"]
pbkdf2 = []
argon2 = []
scrypt = []

[lints]
workspace = true
