[package]
name = "grpc-servers"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the gRPC server
name = "grpc-server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "grpc-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
