[package]
name = "airone_derive"
version = "0.8.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Procedural macros for the Airone Db persistence layer"
authors = ["Massimo Gismondi <info@massimogismondi.it>"]
repository = "https://gitlab.com/MassiminoilTrace/airone"
documentation = "https://massiminoiltrace.gitlab.io/airone/airone/index.html"
keywords = ["database", "derive", "airone", "code", "generation"]

[lib]
proc-macro=true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = {version="2.0.66", features=["extra-traits"]}